<resources>
    <string name="app_name">Demo Dynamic ListView Colour List</string>
    <string name="btnAddColour">ADD NEW COLOUR</string>
    <string name="hint_addColour">Enter new colour</string>
    <string name="hint_colourPosition">Enter position number</string>
    <string name="btnRemoveColour">REMOVE A COLOUR</string>
    <string name="btnUpdateColour">UPDATE A COLOUR</string>
</resources>